--- a/index.html
+++ b/index.html
@@ -2,32 +2,55 @@
 <html>
     <head>
         <title> Origami Designs  </title>
-        <style> 
-            h1 {
-                color:red;
-                background-color: orange;
-            }
-            h2 {
-                background-color: gold;
-            }
-            ul {
-                background-color: lightgreen;
-                border: solid;
-            }
-        </style>
+        <link rel="Stylesheet" type="text/css" href= "style.css">
     </head>
     <body>
-        <h1> Origami Designs </h1>
-        <a href = "about.html" target = "_blank"> About Us</a> <br>
-        <a href = "follow.html" target = "_blank"> Follow Us</a> <br>
-        <a target = "_blank" href = "https://www.youtube.com/watch?v=kUsxMXwCW8A"> <img src = "Dragon Origami.png" width = 600 height = 300> </a>
-        <p> Click on the image to find out how to make it <p>
-        <p> <h2> <i> Fun Facts about origami </i> </h2> </p>
-        <ul>
-            <li> Origami is derived from two Japanese words: <i>Ori </i>(folded) and <i>Kami</i> (paper). Before that, the art was called <i>orikata</i> (folded shapes).</li>
-            <li> Akira Yoshizawa is considered the Grand Master of modern Origami. He created over 50,000 origami models, invented wet-folding, and developed a method of diagramming origami instructions. </li>
-            <li> The fastest time to make 100 origami cranes is 40 minutes 35 seconds, achieved by Yoneyama Yuichi (Japan) in Nagoya, Japan, on 30 November 2010. That’s an average of 24.35 seconds for each crane! </li>
-            <li> An ancient Japanese legend says if you fold one thousand cranes you will be granted a wish. </li>
-        </ul>
+        <div class = "title">
+            <h1> Origami Designs </h1>
+            <div class = "links">
+                <a href = "https://www.whitehatjr.com/" target = "_blank"> About Us</a> <br>
+                <a href = "https://www.facebook.com/whitehatjr/?hc_ref=ARSMdQmJs9nP63FBUdcCTq8ZsNg-gWLzP510ilTPfjrkOw0UNosqI9nxZ6SzABq1BBI&fref=nf&__xts__[0]=68.ARADE4YXzmlFeUfRDoGhmmErk_rvUppWXGt0RmJwcoTWqm-v2KtSH_CPl5hO1KYXfDj_GUWUE9dcZUqOplTaqfoJMqh2MlVkbwCc9F-Bbi2nl_eiXyx05nPC79xtm9psVyzl2US-pQ73sPivAHE1T3B7fjbs0x8A3L7r_6PqUhBFeVLc3Bm_WqFjf9KeuarlJFUefqu_uekVf2w8AM8GoZY2REPcM-HYYmUG6sse-uhIGXQXSYUaIgcPGOKAqbgmaegQy8aG8FulKnkXHplSWnuA0aVn2za1lck_t0PCs2YJvdlK3Qjhvj1XfuFD6FGADIITGI-_VCtfCh3IeXaK1DfU2VGD&__tn__=kC-R" target = "_blank"> Follow Us</a> <br> <br>
+            </div>
+        </div>
+        <div class = "image">
+            <div class = "grid">
+                <div class = "gridItem">
+                    <a target = "_blank" href = "http://origami.me/camel/"> 
+                        <img src = "images/camel.png" width = 300 height = 300> 
+                    </a>
+                </div>
+                <div class = "gridItem">
+                    <a target = "_blank" href = "http://origami.me/teddy-bear/"> 
+                        <img src = "images/teddy.png" width = 300 height = 300> 
+                    </a>
+                </div>
+                <div class = "gridItem">
+                    <a target = "_blank" href = "http://origami.me/panda/"> 
+                        <img src = "images/panda.png" width = 300 height = 300> 
+                    </a>
+                </div>
+                <div class = "gridItem">
+                    <a target = "_blank" href = "http://origami.me/pigeon/"> 
+                        <img src = "images/pigeon.png" width = 300 height = 300> 
+                    </a>
+                </div>
+            </div>
+            <div class = "caption">
+                <p> Click on each image for a tutorial on how to make it <p>
+            </div>
+        </div>
+        <div class = "paragraph">
+            <div class = "paraTitle">
+                <p> <h2> <i> Fun Facts about origami </i> </h2> </p>
+            </div>
+            <div class = "paraBody">
+                <ul>
+                    <li> Origami is derived from two Japanese words: <i>Ori </i>(folded) and <i>Kami</i> (paper). Before that, the art was called <i>orikata</i> (folded shapes).</li>
+                    <li> Akira Yoshizawa is considered the Grand Master of modern Origami. He created over 50,000 origami models, invented wet-folding, and developed a method of diagramming origami instructions. </li>
+                    <li> The fastest time to make 100 origami cranes is 40 minutes 35 seconds, achieved by Yoneyama Yuichi (Japan) in Nagoya, Japan, on 30 November 2010. That’s an average of 24.35 seconds for each crane! </li>
+                    <li> An ancient Japanese legend says if you fold one thousand cranes you will be granted a wish. </li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
